sonar mvnswl